test/test_examples/syntactic_examples/syntax_error/error_statement_42.zig
// Syntax error: excesive separator after opening function bracket

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : f64 = ifj.write(,,"hello", "world", "!");
}